--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.0",
+    "framework7": "^5.1.3",
+    "framework7-react": "^5.1.3",
+    "history": "^4.10.1",
+    "install": "^0.13.0",
     "meteor-node-stubs": "^1.0.0",
+    "npm": "^6.13.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-meteor-data": "^0.2.11",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "meteor": {
     "mainModule": {
