--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.0",
+    "bcrypt": "^3.0.7",
     "framework7": "^5.1.3",
     "framework7-react": "^5.1.3",
     "history": "^4.10.1",
@@ -17,9 +18,7 @@
     "npm": "^6.13.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-meteor-data": "^0.2.11",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-meteor-data": "^0.2.11"
   },
   "meteor": {
     "mainModule": {
