--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.6.0",
     "bcrypt": "^3.0.7",
     "framework7": "^5.1.3",
+    "framework7-icons": "^3.0.0",
     "framework7-react": "^5.1.3",
     "history": "^4.10.1",
     "install": "^0.13.0",
