--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.0",
+    "antd-mobile": "^2.3.1",
     "bcrypt": "^3.0.7",
     "framework7": "^5.1.3",
     "framework7-icons": "^3.0.0",
     "framework7-react": "^5.1.3",
     "history": "^4.10.1",
+    "indexof": "0.0.1",
     "install": "^0.13.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "meteor-node-stubs": "^1.0.0",
     "npm": "^6.13.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-meteor-data": "^0.2.11"
+    "react-meteor-data": "^0.2.11",
+    "react-router-dom": "^5.1.2"
   },
   "meteor": {
     "mainModule": {
