--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less-loader": "^5.0.0",
     "meteor-node-stubs": "^1.0.0",
     "npm": "^6.13.2",
+    "rc-form": "^2.4.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-meteor-data": "^0.2.11",
