--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "meteor-node-stubs": "^1.0.0",
+    "moment": "^2.24.0",
     "npm": "^6.13.2",
     "rc-form": "^2.4.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.9.0",
     "react-meteor-data": "^0.2.11",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-visibility-sensor": "^5.1.1"
   },
   "meteor": {
     "mainModule": {
