--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^3.9.0",
     "react-meteor-data": "^0.2.11",
     "react-router-dom": "^5.1.2",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "shallow-equal": "^1.2.1"
   },
   "meteor": {
     "mainModule": {
