--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rc-form": "^2.4.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.2.1",
     "react-icons": "^3.9.0",
     "react-image-file-resizer": "^0.2.1",
     "react-meteor-data": "^0.2.11",
