--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "npm": "^6.13.2",
     "rc-form": "^2.4.11",
     "react": "^16.9.0",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.2.1",
     "react-icons": "^3.9.0",
