--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/runtime": "^7.6.0",
     "antd-mobile": "^2.3.1",
+    "array-move": "^2.2.1",
     "bcrypt": "^3.0.7",
     "framework7": "^5.1.3",
     "framework7-icons": "^3.0.0",
@@ -24,14 +25,13 @@
     "npm": "^6.13.2",
     "rc-form": "^2.4.11",
     "react": "^16.9.0",
-    "react-dnd": "^10.0.2",
-    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.2.1",
     "react-icons": "^3.9.0",
     "react-image-file-resizer": "^0.2.1",
     "react-meteor-data": "^0.2.11",
     "react-router-dom": "^5.1.2",
+    "react-sortable-hoc": "^1.11.0",
     "react-visibility-sensor": "^5.1.1",
     "shallow-equal": "^1.2.1"
   },
