--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "antd-mobile": "^2.3.1",
     "array-move": "^2.2.1",
     "bcrypt": "^3.0.7",
-    "framework7": "^5.1.3",
-    "framework7-icons": "^3.0.0",
-    "framework7-react": "^5.1.3",
+    "bloomer": "^0.6.5",
+    "bulma": "^0.8.1",
     "history": "^4.10.1",
     "indexof": "0.0.1",
     "install": "^0.13.0",
@@ -27,6 +26,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.2.1",
+    "react-geolocated": "^3.0.1",
     "react-icons": "^3.9.0",
     "react-image-file-resizer": "^0.2.1",
     "react-meteor-data": "^0.2.11",
