--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.6.0",
+    "@babel/runtime": "^7.9.2",
     "@brainhubeu/react-carousel": "^1.13.19",
+    "animate-components": "^1.4.8",
     "antd-mobile": "^2.3.1",
     "array-move": "^2.2.1",
     "bcrypt": "^3.0.7",
