--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,20 @@
 {
-  "short_name": "lbrll",
   "name": "Librella",
-  "start_url": "/",
-  "display": "standalone",
+  "short_name": "Librella",
   "icons": [
     {
-      "src": "/images/icons-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "/images/icons-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
-  "background_color": "#FFFFFF",
-  "scope": "/",
-  "theme_color": "#2196f3"
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
+  "start_url": "https://librella.co",
+  "display": "standalone"
 }
