added grommet and made a little more ssemantic

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^3.0.8",
     "bloomer": "^0.6.5",
     "bulma": "^0.8.1",
+    "grommet": "^2.13.0",
     "history": "^4.10.1",
     "indexof": "0.0.1",
     "install": "^0.13.0",
@@ -24,6 +25,7 @@
     "meteor-node-stubs": "^1.0.0",
     "moment": "^2.24.0",
     "npm": "^6.13.2",
+    "polished": "^3.5.2",
     "rc-form": "^2.4.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -38,7 +40,8 @@
     "react-sortable-hoc": "^1.11.0",
     "react-visibility-sensor": "^5.1.1",
     "shallow-equal": "^1.2.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.1.0"
   },
   "meteor": {
     "mainModule": {
