--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "@babel/runtime": "^7.9.2",
     "@brainhubeu/react-carousel": "^1.13.19",
+    "@chakra-ui/react": "^1.0.4",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "animate-components": "^1.4.8",
-    "antd-mobile": "^2.3.1",
+    "antd-mobile": "^2.3.4",
     "array-move": "^2.2.1",
     "bcrypt": "^3.0.8",
     "bloomer": "^0.6.5",
     "bulma": "^0.8.1",
+    "framer-motion": "^3.1.1",
     "grommet": "^2.13.0",
     "history": "^4.10.1",
     "indexof": "0.0.1",
@@ -27,8 +31,8 @@
     "npm": "^6.13.2",
     "polished": "^3.5.2",
     "rc-form": "^2.4.11",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-dropzone": "^10.2.1",
     "react-geolocated": "^3.0.1",
     "react-icons": "^3.9.0",
