--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "bloomer": "^0.6.5",
     "bulma": "^0.9.4",
     "framer-motion": "^10.11.2",
-    "grommet": "^2.31.0",
     "meteor-node-stubs": "^1.2.5",
     "moment": "^2.29.4",
     "rc-form": "^2.4.12",
@@ -34,6 +33,7 @@
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
     "react-sortable-hoc": "^2.0.0",
+    "react-visibility-sensor": "^5.1.1",
     "shallow-equal": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9"
