--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^10.11.2",
     "meteor-node-stubs": "^1.2.5",
     "moment": "^2.29.4",
+    "openai": "^4.24.1",
     "query-string": "^8.1.0",
     "rc-form": "^2.4.12",
     "react": "^18.2.0",
@@ -39,6 +40,7 @@
     "react-sortable-hoc": "^2.0.0",
     "react-visibility-sensor": "^5.1.1",
     "shallow-equal": "^3.1.0",
+    "simpl-schema": "^3.4.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9"
   },
