--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^14.2.3",
     "react-image-file-resizer": "^0.4.8",
     "react-intl": "^6.3.2",
+    "react-render-html": "^0.6.0",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
